syntax = "proto3";
import "basekv/raft/ClusterConfig.proto";

package basekv.raft;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basekv.raft.proto";
option optimize_for = SPEED;

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  oneof Type{
    bytes data = 3;
    ClusterConfig config = 4;
  }
}
